--- a/amaliy2/home.html
+++ b/amaliy2/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Secure File Upload System</title>
+    <title>Xavfsiz file yuklash tizimi</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -107,9 +107,9 @@
 </head>
 <body>
     <div class="upload-container">
-        <h1>Secure File Upload System</h1>
+        <h1>Dasturga file yuklashni xavfsizlantirish</h1>
         <div class="file-input-container" id="dropZone">
-            <p>Drag & Drop files here or click to select</p>
+            <p>Drag va drop yoki ochish uchun bosing</p>
             <input type="file" id="fileInput" multiple style="display: none">
         </div>
         <div class="error-message" id="errorMessage"></div>
@@ -117,10 +117,10 @@
         <div class="progress-bar" id="progressBar">
             <div class="progress-bar-fill" id="progressBarFill"></div>
         </div>
-        <button class="upload-btn" id="uploadBtn" disabled>Upload Files</button>
+        <button class="upload-btn" id="uploadBtn" disabled>File yuklash</button>
         <div class="file-list" id="fileList"></div>
         <div class="logs-container" id="logsContainer">
-            <h3>System Logs</h3>
+            <h3>Tizim yuklash</h3>
             <div id="logEntries"></div>
         </div>
     </div>
